welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:10: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
      hunt()
          ^SlugSnail:14: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    hunt()
        ^